kubernetes/entertainment/tunarr/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tunarr
  namespace: entertainment
spec:
  parentRefs:
    - name: internal
      namespace: network
  hostnames:
    - "tunarr.whoverse.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: tunarr
          port: 8000
